Changelog
=========

3.0a6 (unreleased)
------------------

- Nothing changed yet.


3.0a5 (2011-02-08)
------------------

- Fix for dealing with objects that are being created from a portal factory.


3.0a4 (2011-02-08)
------------------

- Remedy another brown-bag release: CHANGES.txt was missing in the manifest
  after restructuring in a3.


3.0a3 (2011-02-08)
------------------

- Fix manifest to include .py files from non-Python-package directories.

- Update setup.py to include a somewhat sensible long description.